--- a/works.html
+++ b/works.html
@@ -78,7 +78,7 @@
 
         <section class = main>
             <div>
-                <a class = spotlight data-page = false href = assets/images/reuben_2.22_large.jpg title = "Reuben 2.22 - oil on canvas - 20cm × 28cm - 2022"><img src = assets/images/reuben_2.22_small.jpg title = "Reuben 2.22"></a>
+                <a class = spotlight data-page = false href = assets/images/reuben_2.22_large.jpg title = "Reuben 2.22 - oil on canvas - 20cm × 28cm - 2022 - sold"><img src = assets/images/reuben_2.22_small.jpg title = "Reuben 2.22"></a>
                 <a class = spotlight data-page = false href = assets/images/nebula_3_large.jpg title = "Nebula 3 - oil on board - 170cm × 122cm - 2022 - sold"><img src = assets/images/nebula_3_small.jpg title = "Nebula 3"></a>
                 <a class = spotlight data-page = false href = assets/images/another_sunday_morning_large.jpg title = "Another Sunday Morning - oil on canvas - 20cm × 28cm - 2021 - sold"><img src = assets/images/another_sunday_morning_small.jpg title = "Another Sunday Morning"></a>
                 <a class = spotlight data-page = false href = assets/images/self_10.21_large.jpg title = "Self 10.21 - oil on canvas - 20cm × 28cm - 2021 - sold"><img src = assets/images/self_10.21_small.jpg title = "Self 10.21"></a>
@@ -115,7 +115,7 @@
                 <a class = spotlight data-page = false href = assets/images/flock_6_large.jpg title = "Flock 6 - oil on board - 170cm × 122cm - 2022"><img src = assets/images/flock_6_small.jpg title = "Flock 6"></a>
                 <a class = spotlight data-page = false href = assets/images/joachim_8.21_large.jpg title = "Joachim 8.21 - oil on board - 58cm × 74cm - 2021 - sold"><img src = assets/images/joachim_8.21_small.jpg title = "Joachim 8.21"></a>
                 <a class = spotlight data-page = false href = assets/images/at_the_exit_large.jpg title = "At The Exit - oil on board - 170cm × 122cm - 2020"><img src = assets/images/at_the_exit_small.jpg title = "At The Exit"></a>
-                <a class = spotlight data-page = false href = assets/images/reuben_4.22_large.jpg title = "Reuben 4.22 - oil on board - 58cm × 74cm - 2022"><img src = assets/images/reuben_4.22_small.jpg title = "Reuben 4.22"></a>
+                <a class = spotlight data-page = false href = assets/images/reuben_4.22_large.jpg title = "Reuben 4.22 - oil on board - 58cm × 74cm - 2022 - sold"><img src = assets/images/reuben_4.22_small.jpg title = "Reuben 4.22"></a>
                 <a class = spotlight data-page = false href = assets/images/the_dump_large.jpg title = "The Dump - oil on board - 170cm × 122cm - 2022"><img src = assets/images/the_dump_small.jpg title = "The Dump"></a>
                 <a class = spotlight data-page = false href = assets/images/3.7.21_large.jpg title = "3.7.21 - oil on canvas - 28cm × 20cm - 2021"><img src = assets/images/3.7.21_small.jpg title = "3.7.21"></a>
                 <a class = spotlight data-page = false href = assets/images/x_large.jpg title = "X - oil on canvas - 28cm × 20cm - 2021"><img src = assets/images/x_small.jpg title = "X"></a>
@@ -146,7 +146,7 @@
                 <a class = spotlight data-page = false href = assets/images/casualty_large.jpg title = "Casualty - oil on canvas - 20cm × 14cm - 2012 - sold"><img src = assets/images/casualty_small.jpg title = "Casualty"></a>
                 <a class = spotlight data-page = false href = assets/images/salvage_1_large.jpg title = "Salvage 1 - oil on canvas - 20cm × 28cm - 2012 - sold"><img src = assets/images/salvage_1_small.jpg title = "Salvage 1"></a>
 
-                <a class = spotlight data-page = false href = assets/images/self_2.22_large.jpg title = "Self 2.22 - oil on canvas - 20cm × 28cm - 2022"><img src = assets/images/self_2.22_small.jpg title = "Self 2.22"></a>
+                <a class = spotlight data-page = false href = assets/images/self_2.22_large.jpg title = "Self 2.22 - oil on canvas - 20cm × 28cm - 2022 - sold"><img src = assets/images/self_2.22_small.jpg title = "Self 2.22"></a>
                 <a class = spotlight data-page = false href = assets/images/transit_large.jpg title = "Transit - oil on board - 80cm × 109cm - 2020 - sold"><img src = assets/images/transit_small.jpg title = "Transit"></a>
                 <a class = spotlight data-page = false href = assets/images/joachim_7.20_large.jpg title = "Joachim 7.20 - oil on canvas - 20cm × 28cm - 2020 - sold"><img src = assets/images/joachim_7.20_small.jpg title = "Joachim 7.20"></a>
                 <a class = spotlight data-page = false href = assets/images/noto_large.jpg title = "Noto - oil on board - 160cm × 122cm - 2019 - sold"><img src = assets/images/noto_small.jpg title = "Noto"></a>
