--- a/projects.html
+++ b/projects.html
@@ -101,7 +101,7 @@
                 </div>
 
                 <h2>Five Plus</h2>
-                Mixed media on board ~ 121cm &times; 80cm ~ 2018 ~ Sold
+                Mixed media on board ~ 121cm × 80cm ~ 2018 ~ Sold
             </div>
 
             <div>
@@ -121,7 +121,7 @@
                     </div>
 
                     <h2>Wash Day</h2>
-                    Mixed media on board ~ 107cm &times; 69cm ~ 2018 ~ Sold
+                    Mixed media on board ~ 107cm × 69cm ~ 2018 ~ Sold
                 </div>
 
                 <div>
@@ -141,7 +141,7 @@
                     </div>
 
                     <h2>Smoking Fags at the Exit</h2>
-                    Mixed media on board ~ 121cm &times; 80cm ~ 2018 ~ Sold
+                    Mixed media on board ~ 121cm × 80cm ~ 2018 ~ Sold
                 </div>
 
                 
@@ -163,7 +163,7 @@
                     </div>
 
                     <h2>Flash Mob</h2>
-                    Mixed media on board ~ 210cm &times; 120cm ~ 2015 ~ Sold
+                    Mixed media on board ~ 210cm × 120cm ~ 2015 ~ Sold
                 </div>
 
                 <div>
@@ -172,7 +172,7 @@
                     </div>
 
                     <h2>Carnival</h2>
-                    Mixed media on canvas ~ 112cm &times; 54cm ~ 2014 ~ Sold
+                    Mixed media on canvas ~ 112cm × 54cm ~ 2014 ~ Sold
                 </div>
 
                 <div>
@@ -181,7 +181,7 @@
                     </div>
 
                     <h2>Point One</h2>
-                    Mixed media on canvas ~ 91cm &times; 38cm ~ 2014 ~ Sold
+                    Mixed media on canvas ~ 91cm × 38cm ~ 2014 ~ Sold
                 </div>
 
                 <div>
@@ -190,7 +190,7 @@
                     </div>
 
                     <h2>Bugs</h2>
-                    Mixed media on board ~ 100cm &times; 70cm ~ 2013 ~ Sold
+                    Mixed media on board ~ 100cm × 70cm ~ 2013 ~ Sold
                 </div>
             </div>
 
