Fixed commit conflict

--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
             <h2>Exhibitions</h2>
 
             <ul>
-                <li>Beaux Arts, Bath. Solo Exhibitions 2003, 2005, 2007, 2009, 2011, 2013, 2015, 2017, 2019, 2021...</li>
+                <li>Beaux Arts, Bath. Solo Exhibitions 2003, 2005, 2007, 2009, 2011, 2013, 2015, 2017, 2019, 2021, 2023/li>
                 <li>British Art Fair, London. 2007 - 2015, 2022</li>
                 <li>The London Art Fair, London. 2006 - 2022</li>
                 <li>Ffin y Parc Gallery, Conwy. 2021</li>
