--- a/about.html
+++ b/about.html
@@ -52,9 +52,9 @@
             <h2>Exhibitions</h2>
 
             <ul>
-                <li>Beaux Arts, Bath. Solo Exhibitions 2003, 2005, 2007, 2009, 2011, 2013, 2015, 2017, 2019, 2021, 2023/li>
+                <li>Beaux Arts, Bath. Solo Exhibitions 2003, 2005, 2007, 2009, 2011, 2013, 2015, 2017, 2019, 2021, 2023</li>
+                <li>The London Art Fair, London. 2006 - 2023</li>
                 <li>British Art Fair, London. 2007 - 2015, 2022</li>
-                <li>The London Art Fair, London. 2006 - 2022</li>
                 <li>Ffin y Parc Gallery, Conwy. 2021</li>
                 <li>BP Awards, National Portrait Gallery, London. 2000, 2010, 2011, 2012, 2018</li>
                 <li>Ruth Borchard Self Portrait Prize, Piano Nobile. 2017</li>
