--- a/about.html
+++ b/about.html
@@ -10,6 +10,12 @@
         <link rel = stylesheet href = css/main.css>
 
         <style>
+            .main img {
+                width: 60%;
+                border-radius: .3em;
+                margin-bottom: 1em
+            }
+
             div {
                 background-color: var(--box);
                 border-radius: .3em;
@@ -48,6 +54,7 @@
         </section>
 
         <section class = main>
+            <img src = assets/images/studio.jpg>
 
             <h2>Exhibitions</h2>
 
