--- a/about.html
+++ b/about.html
@@ -90,8 +90,8 @@
                         No decree or creed can outlaw you
                         As you take every living thing apart. Little
                         Master of earth, no one gets to heaven
-                        Without going through you first.
-                    </i> ~ Ode to the Maggot ~ Yusef Komunyakaa
+                        Without going through you first. ~ Ode to the Maggot
+                    </i> ~ Yusef Komunyakaa
                 </div>
             </a>
 
