--- a/book.html
+++ b/book.html
@@ -64,6 +64,7 @@
             }
 
             .banner {
+                display: inline-block;
                 background-color: var(--box);
                 border-radius: .3em;
                 margin: 1em 1em 0 0;
@@ -179,16 +180,20 @@
                 </div>
             </div>
 
-            <div class = banner>
-                <span>Softback - £20</span>
-                <a href = https://www.beauxartsbath.co.uk/artists/nathan-ford-2 target = _blank>www.beauxartsbath.co.uk</a>
-                <a href = tel:07775941458>07775941458</a>
+            <div>
+                <div class = banner>
+                    <span>Softback - £20</span>
+                    <a href = https://www.beauxartsbath.co.uk/artists/nathan-ford-2 target = _blank>www.beauxartsbath.co.uk</a>
+                    <a href = tel:07775941458>07775941458</a>
+                </div>
             </div>
 
-            <div class = banner>
-                <span>Signed Hardback - £120</span>
-                <a href = https://www.anderidabooks.co.uk/product/2237/HOW-TO-MAKE-A-PROPER-ALIEN-Signed-First-Edition-Hardback target = _blank>www.anderidabooks.co.uk</a>
-                <a href = tel:07940038586>07940038586</a>
+            <div>
+                <div class = banner>
+                    <span>Signed Hardback - £120</span>
+                    <a href = https://www.anderidabooks.co.uk/product/2237/HOW-TO-MAKE-A-PROPER-ALIEN-Signed-First-Edition-Hardback target = _blank>www.anderidabooks.co.uk</a>
+                    <a href = tel:07940038586>07940038586</a>
+                </div>
             </div>
 
             <script>
