--- a/works.html
+++ b/works.html
@@ -68,11 +68,10 @@
 
         <section class = main>
             <div>
-                <a class = spotlight data-page = false href = assets/images/works/Magic-Roundabout.jpg title = "Magic Roundabout - oil on board - 170cm &times; 122cm - 2023"><img src = assets/images/works/Magic-Roundabout_.jpg title = "Magic Roundabout"></a>
                 <a class = spotlight data-page = false href = assets/images/works/Reuben-2.22.jpg title = "Reuben 2.22 - oil on canvas - 20cm &times; 28cm - 2022 - sold"><img src = assets/images/works/Reuben-2.22_.jpg title = "Reuben 2.22"></a>
                 <a class = spotlight data-page = false href = assets/images/works/Nebula-3.jpg title = "Nebula 3 - oil on board - 170cm &times; 122cm - 2022 - sold"><img src = assets/images/works/Nebula-3_.jpg title = "Nebula 3"></a>
                 <a class = spotlight data-page = false href = assets/images/works/Another-Sunday-Morning.jpg title = "Another Sunday Morning - oil on canvas - 20cm &times; 28cm - 2021 - sold"><img src = assets/images/works/Another-Sunday-Morning_.jpg title = "Another Sunday Morning"></a>
-                <a class = spotlight data-page = false href = assets/images/works/Walled-Garden.jpg title = "Walled Garden - oil on board - 170cm &times; 90cm - 2022"><img src = assets/images/works/Walled-Garden_.jpg title = "Walled Garden"></a>
+                <a class = spotlight data-page = false href = assets/images/works/Walled-Garden.jpg title = "Walled Garden - oil on board - 170cm &times; 90cm - 2022 - sold"><img src = assets/images/works/Walled-Garden_.jpg title = "Walled Garden"></a>
                 <a class = spotlight data-page = false href = assets/images/works/Self-10.21.jpg title = "Self 10.21 - oil on canvas - 20cm &times; 28cm - 2021 - sold"><img src = assets/images/works/Self-10.21_.jpg title = "Self 10.21"></a>
                 <a class = spotlight data-page = false href = assets/images/works/Anna-8.21.jpg title = "Anna 8.21 - oil on board - 58cm &times; 74cm - 2021"><img src = assets/images/works/Anna-8.21_.jpg title = "Anna 8.21"></a>
                 <a class = spotlight data-page = false href = assets/images/works/3.7.21.jpg title = "3.7.21 - oil on canvas - 28cm &times; 20cm - 2021"><img src = assets/images/works/3.7.21_.jpg title = "3.7.21"></a>
@@ -103,12 +102,11 @@
                 <a class = spotlight data-page = false href = assets/images/works/Boo-1.jpg title = "Boo 1 - oil on canvas - 20cm &times; 28cm - 2010 - sold"><img src = assets/images/works/Boo-1_.jpg title = "Boo 1"></a>
                 <a class = spotlight data-page = false href = assets/images/works/Boundary-2.jpg title = "Boundary 2 - oil on canvas - 212cm &times; 120cm - 2012 - sold"><img src = assets/images/works/Boundary-2_.jpg title = "Boundary 2"></a>
 
-                <a class = spotlight data-page = false href = assets/images/works/X.jpg title = "X - oil on canvas - 28cm &times; 20cm - 2022"><img src = assets/images/works/X_.jpg title = "X"></a>
-                <a class = spotlight data-page = false href = assets/images/works/Flock-9.jpg title = "Flock 9 - oil on board - 170cm &times; 122cm - 2022"><img src = assets/images/works/Flock-9_.jpg title = "Flock 9"></a>
+                <a class = spotlight data-page = false href = assets/images/works/Flock-9.jpg title = "Flock 9 - oil on board - 170cm &times; 122cm - 2022 - sold"><img src = assets/images/works/Flock-9_.jpg title = "Flock 9"></a>
                 <a class = spotlight data-page = false href = assets/images/works/Joachim-8.21.jpg title = "Joachim 8.21 - oil on board - 58cm &times; 74cm - 2021 - sold"><img src = assets/images/works/Joachim-8.21_.jpg title = "Joachim 8.21"></a>
                 <a class = spotlight data-page = false href = assets/images/works/At-The-Exit.jpg title = "At The Exit - oil on board - 170cm &times; 122cm - 2020"><img src = assets/images/works/At-The-Exit_.jpg title = "At The Exit"></a>
                 <a class = spotlight data-page = false href = assets/images/works/Reuben-4.22.jpg title = "Reuben 4.22 - oil on board - 58cm &times; 74cm - 2022 - sold"><img src = assets/images/works/Reuben-4.22_.jpg title = "Reuben 4.22"></a>
-                <a class = spotlight data-page = false href = assets/images/works/The-Dump.jpg title = "The Dump - oil on board - 170cm &times; 122cm - 2022"><img src = assets/images/works/The-Dump_.jpg title = "The Dump"></a>
+                <a class = spotlight data-page = false href = assets/images/works/X.jpg title = "X - oil on canvas - 28cm &times; 20cm - 2022"><img src = assets/images/works/X_.jpg title = "X"></a>
                 <a class = spotlight data-page = false href = assets/images/works/Dads-Last-Day.jpg title = "Dad's Last Day - oil on canvas - 28cm &times; 20cm - 2017 - nfs"><img src = assets/images/works/Dads-Last-Day_.jpg title = "Dad's Last Day"></a>
                 <a class = spotlight data-page = false href = assets/images/works/Self-11.20.jpg title = "Self 11.20 - oil on canvas - 20cm &times; 28cm - 2020 - sold"><img src = assets/images/works/Self-11.20_.jpg title = "Self 11.20"></a>
                 <a class = spotlight data-page = false href = assets/images/works/Epic.jpg title = "Epic - oil on board - 200cm &times; 122cm - 2019 - sold"><img src = assets/images/works/Epic_.jpg title = "Epic"></a>
@@ -135,7 +133,6 @@
                 <a class = spotlight data-page = false href = assets/images/works/Stan-3.jpg title = "Stan 3 - oil on canvas - 20cm &times; 28cm - 2012 - sold"><img src = assets/images/works/Stan-3_.jpg title = "Stan 3"></a>
                 <a class = spotlight data-page = false href = assets/images/works/Joachim.jpg title = "Joachim - oil on canvas - 20cm &times; 28cm - 2010 - nfs"><img src = assets/images/works/Joachim_.jpg title = "Joachim"></a>
 
-                <a class = spotlight data-page = false href = assets/images/works/Coast-Road-2.jpg title = "Coast Road 2 - oil on board - 170cm &times; 122cm - 2023"><img src = assets/images/works/Coast-Road-2_.jpg title = "Coast Road 2"></a>
                 <a class = spotlight data-page = false href = assets/images/works/Joachim-7.20.jpg title = "Joachim 7.20 - oil on canvas - 20cm &times; 28cm - 2020 - sold"><img src = assets/images/works/Joachim-7.20_.jpg title = "Joachim 7.20"></a>
                 <a class = spotlight data-page = false href = assets/images/works/Transit.jpg title = "Transit - oil on board - 80cm &times; 109cm - 2020 - sold"><img src = assets/images/works/Transit_.jpg title = "Transit"></a>
                 <a class = spotlight data-page = false href = assets/images/works/Self-2.22.jpg title = "Self 2.22 - oil on canvas - 20cm &times; 28cm - 2022 - sold"><img src = assets/images/works/Self-2.22_.jpg title = "Self 2.22"></a>
